fixed mobile navbar alignment issues

--- a/frontend/src/components/Layout/Navbar/Navbar.css
+++ b/frontend/src/components/Layout/Navbar/Navbar.css
@@ -140,11 +140,13 @@
     font-weight: 800;
     width: 45vw;
     justify-content: space-between;
+    border: 1px solid red;
   }
 
   .navbar-wrapper .mobile-navbar .search {
     font-size: 18px;
-    margin-right: 6px;
+    margin-right: 1px;
+    margin-top: 13px;
   }
 
   .navbar-wrapper .mobile-search-navbar {
